opam-version: "2.0"
name: "lwt-pipe"
version: "0.1"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "An alternative to `Lwt_stream` with interfaces for producers and consumers and a bounded internal buffer"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {>= "1.1"}
  "lwt"
  "lwt-pipe" { = version}
  "ocaml" { >= "4.03.0" }
  "mirage-time"
  "mirage-channel"
  "duration"
]
tags: [ "lwt" "pipe" "stream" "blocking" ]
homepage: "https://github.com/c-cube/lwt-pipe/"
dev-repo: "git+https://github.com/c-cube/lwt-pipe.git"
bug-reports: "https://github.com/c-cube/lwt-pipe/issues/"

