opam-version: "1.2"
name: "lwt-pipe"
version: "dev"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  [make "build"]
]
install: [
  [make "install"]
]
remove: [
  ["ocamlfind" "remove" "lwt-pipe"]
]
build-doc: [ make "doc" ]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "lwt"
]
tags: [ "lwt" "pipe" "stream" "blocking" ]
homepage: "https://github.com/c-cube/lwt-pipe/"
dev-repo: "https://github.com/c-cube/lwt-pipe.git"
bug-reports: "https://github.com/c-cube/lwt-pipe/issues/"

