opam-version: "2.0"
name: "lwt-pipe"
version: "dev"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "An alternative to `Lwt_stream` with interfaces for producers and consumers and a bounded internal buffer"
build: [
  ["jbuilder" "build" "-p" name]
  ["jbuilder" "build" "@doc" "-p" name] {with-doc}
]
depends: [
  "jbuilder" {build}
  "lwt"
  "lwt_ppx"
]
tags: [ "lwt" "pipe" "stream" "blocking" ]
homepage: "https://github.com/c-cube/lwt-pipe/"
dev-repo: "git+https://github.com/c-cube/lwt-pipe.git"
bug-reports: "https://github.com/c-cube/lwt-pipe/issues/"

